<resources>
    <string name="app_name">Mifos Mobile</string>
    <string name="login">Login</string>
    <string name="toast_welcome">Welcome %1$s</string>
    <string name="unable_to_connect">Not connected to internet</string>
    <string name="basic">Basic</string>
    <string name="username">Username</string>
    <string name="progress_message_login">Logging In</string>
    <string name="progress_message_loading">Loading</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="accounts">Accounts</string>
    <string name="clients">Clients</string>
    <string name="funds_transfer">Funds Transfer</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="charges">Charges</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="about_us">About Us</string>
    <string name="saving_account_details">Saving Account Details</string>
    <string name="savings_account">Savings Account</string>
    <string name="error_loan_account_details_loading">Error loading in loan accounts detail</string>
    <string name="nominal_interest_rate">Nominal Interest Rate</string>
    <string name="account_number">Account Number</string>
    <string name="account_balance">Account Balance</string>
    <string name="total_deposits">Total Deposits</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="large_text">Large Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="small_text">Small Text</string>
    <string name="client_accounts">Client Accounts</string>
    <string name="splash">Splash</string>
    <string name="savings">Saving</string>
    <string name="loan">Loan</string>
    <string name="loan_account">Loan Account</string>
    <string name="share">Share</string>
    <string name="share_account">Share Account</string>
    <string name="clients_list">Chose a client</string>
    <string name="working">Working</string>
    <string name="status_image">Status Image</string>
    <string name="loan_repayment_schedule">Repayment Schedule</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="made_on">Made on</string>
    <string name="make_transfer">Make a Transfer</string>
    <string name="select_loan_product">Select Loan Product*</string>
    <string name="purpose_of_loan">Purpose of Loan*</string>
    <string name="principal_amount">Principal Amount*</string>
    <string name="amount">Amount</string>
    <string name="remark">Remark</string>
    <string name="expected_disbursement_date">Expected Disbursement Date</string>
    <string name="submission_date">Submission Date</string>
    <string name="submitted">Submitted</string>
    <string name="disbursement">Disbursement</string>
    <string name="transfer_date">Transfer Date</string>
    <string name="apply_for_loan">Apply for Loan</string>
    <string name="update_loan">Update Loan</string>
    <string name="withdraw_loan">Withdraw Loan</string>
    <string name="withdraw_loan_reason">Reason to Withdraw Loan</string>
    <string name="loan_account_withdrawn_successfully">Loan account successfully withdrawn</string>
    <string name="review">Review</string>
    <string name="submit_loan">Submit Loan</string>
    <string name="new_loan_application">New Loan Application for</string>
    <string name="update_loan_application">Update Loan Application for</string>
    <string name="loan_interest_type">Interest Type</string>
    <string name="amortization">Amortization</string>
    <string name="interest_calculation_period">Interest calculation period</string>
    <string name="repayment_strategy">Repayment Strategy</string>
    <string name="pay_to">Pay To</string>
    <string name="pay_from">Pay From</string>
    <string name="cancel">Cancel</string>
    <string name="review_transfer">Review</string>
    <string name="transfer_to">Transfer To</string>
    <string name="transfer_from">Transfer From</string>
    <string name="making_transfer">Making Transfer</string>
    <string name="deposit">Deposit</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="remark_is_mandatory">Remark is mandatory</string>
    <string name="approved">Approved</string>
    <string name="shares_pending">Pending</string>
    <string name="loan_amount_paid">Paid</string>
    <string name="balance">Balance</string>
    <string name="rejected">Rejected</string>
    <string name="waiting">Waiting</string>
    <string name="overpaid">Overpaid</string>
    <string name="in_arrears">In Arrears</string>
    <string name="select_you_want">Select all filters you want to apply</string>
    <string name="filter_savings">Filter Savings Accounts</string>
    <string name="filter_loan">Filter Loan Accounts</string>
    <string name="filter_share">Filter Share Accounts</string>
    <string name="search">Search</string>
    <string name="select_pay_to">Select Account to Pay To</string>
    <string name="select_pay_from">Select Account to Pay From</string>
    <string name="enter_remarks">Enter Remarks for transfer</string>
    <string name="select_beneficiary">Select Beneficiary</string>
    <string name="continue_str">Continue</string>
    <string name="close">Close</string>
    <string name="choose_transfer_type">Choose Transfer Type</string>
    <string name="transfer_to_savings">Transfer To Savings</string>
    <string name="transfer_from_savings">Transfer from Savings</string>
    <string name="loan_charges">Loan Charges</string>
    <string name="savings_charges">Savings Charges</string>
    <string name="active">Active</string>
    <string name="closed">Closed</string>
    <string name="withdrawn">Withdrawn</string>
    <string name="need_approval">Need Approval</string>
    <string name="pending">Pending</string>
    <string name="matured">Matured</string>
    <string name="create_an_account">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="request_id">Request Id</string>
    <string name="authentication_token">Authentication Token</string>
    <string name="verify">Verify</string>
    <string name="verifying">Verifying</string>
    <string name="sign_up">Signing up</string>
    <string name="verified">User has been verified successfully</string>
    <string name="rb_mobile">mobile</string>
    <string name="rb_email">email</string>
    <string name="verification_mode">Verification Mode</string>
    <string name="blank">&#160;</string>
    <string name="import_qr">Import QR</string>
    <string name="use_touch_id">Use Touch Id</string>
    <string name="view_guarantor">View Guarantor</string>
    <string name="add_guarantor">Add Guarantor</string>
    <string name="delete_guarantor">Delete Guarantor</string>
    <string name="update_guarantor">Update Guarantor</string>
    <string name="guarantor_type">Guarantor Type</string>
    <string name="no_guarantors">No Guarantors</string>
    <string name="tap_to_add_guarantor">Tap to Add Guarantor</string>
    <string name="guarantor_details">Guarantor Details</string>
    <string name="joined_date">Joined Date</string>
    <string name="submit">Submit</string>
    <string name="select_product_id">Select Product Id</string>
    <string name="account_id">Account Id</string>
    <string name="new_saving_account_application">New Saving Account Application</string>
    <string name="update_savings_account">Update Savings Account</string>
    <string name="withdraw_savings_account">Withdraw Savings Account</string>
    <string name="withdrawal_date">Withdrawal Date</string>
    <string name="new_saving_account_created_successfully">New Saving Account created successfully.</string>
    <string name="saving_account_updated_successfully">Saving Account Updated Successfully</string>
    <string name="savings_account_withdraw_successful">Savings Account Withdraw Successful</string>
    <string name="string_savings_account">%1$s Savings Account</string>
    <string name="apply">Apply</string>
    <string name="apply_savings_account">Apply Savings Account</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="passcode">Passcode</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="no">No</string>
    <string name="found">found</string>
    <string name="password_key" translatable="false">Password</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="change_app_passcode">Change App Passcode</string>
    <string name="change_password">Change Password</string>
    <string name="change_account_password">Change your Account Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="string_changed_successfully">%1$s changed successfully</string>
    <string name="account_not_active_to_perform_deposit">Account should to be Active to perform a
        deposit
    </string>
    <string name="account_not_active_to_perform_transfer">Account should to be Active to perform a
        transfer
    </string>
    <string name="empty_requestid">Request ID cannot be empty</string>
    <string name="empty_authentication_token">Authentication Token cannot be empty</string>
    <string name="empty_savings_accounts">There is no SavingsAccount associated with you</string>
    <string name="empty_loan_accounts">There is no LoanAccount associated with you</string>
    <string name="empty_share_accounts">There is no ShareAccount associated with you</string>
    <string name="empty_transactions">There is no transactions associated with you</string>
    <string name="empty_repayment_schedule">There is no repayment schedule associated with you
    </string>
    <string name="no_more_transactions_available">No more transactions available</string>
    <string name="no_transaction">No Transaction</string>
    <string name="no_dob_found">No DOB found.</string>
    <string name="not_assigned_with_any_group">Not Assigned with any group</string>
    <string name="error_unauthorised">Invalid Username/Password</string>
    <string name="loan_purpose">Loan Purpose</string>
    <string name="principal">Principal</string>
    <string name="loan_name">Loan Name</string>
    <string name="currency">Currency</string>
    <string name="transfer">Transfer</string>
    <string name="four_weeks">4 Weeks</string>
    <string name="three_months">3 Months</string>
    <string name="six_months">6 Months</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date">Date</string>
    <string name="manage_beneficiaries">Manage Beneficiaries</string>
    <string name="office_name">Office Name</string>
    <string name="income_generating_loan">Income Generating Loan</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="dummy_principal_amount">143.00</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose your language</string>
    <string name="language_type" translatable="false">language_type</string>
    <string name="pref_base_url_title">Update Endpoint</string>
    <string name="pref_base_url_desc">Click here to change your Endpoint Configurations</string>
    <string name="pref_configuration" translatable="false">pref_configuration</string>
    <string name="product">Product</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="transaction_period">Transaction Period</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="theme">Theme</string>
</resources>