<?xml version="1.0" encoding="utf-8"?><!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/self-service-app/blob/master/LICENSE.md
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search_saving"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_search_loan"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_search_share"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_filter_savings"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/savings_account"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_filter_loan"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/loan_account"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_filter_shares"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/share_account"
        android:visible="false"
        app:showAsAction="always" />

</menu>