<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_acounts"
        android:enabled="true"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/accounts"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_transfer"
        android:enabled="true"
        android:icon="@drawable/ic_compare_arrows_black_24dp"
        android:title="@string/transfer"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText"/>

</menu>